[gd_scene load_steps=2 format=3 uid="uid://cloading_overlay"]

[ext_resource type="Script" path="res://scenes/ui/loading_overlay.gd" id="1_loading"]

[node name="LoadingOverlay" type="CanvasLayer"]
layer = 105
process_mode = 3
script = ExtResource("1_loading")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.0705882, 0.101961, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_type_variation = &"BoxContainerSpaced"
alignment = 1

[node name="LoadingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"H1"
text = "Loading..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
max_value = 1.0
value = 0.5
show_percentage = false

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Caption"
text = "Preparing..."
horizontal_alignment = 1
